force-app/main/default/objects/Job_Ad_Field__mdt/Job_Ad_Field__mdt.object-meta.xml
<CustomObject>
    <description>Configurable fields for Job Ad Generator intake notes</description>
    <label>Job Ad Field</label>
    <pluralLabel>Job Ad Fields</pluralLabel>
</CustomObject>