force-app/main/default/objects/Job_Ad_Field__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Field API Name</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>