force-app/main/default/objects/Job_Ad_Field__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this field should appear in the UI</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>